--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+server:
+  tomcat:
+    max-threads: 1000
+    min-spare-threads: 30
+  port: 8443
+
 spring:
   datasource:
     # 配置数据源
@@ -7,26 +13,47 @@ spring:
     url: jdbc:mysql://192.168.0.146:3306/spring?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
     username: root
     password: root
+#    连接池配置信息
+    initialSize: 10
+    minIdle: 10
+    maxActive: 100
+    maxWait: 60000
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: SELECT 1 FROM DUAL
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxPoolPreparedStatementPerConnectionSize: 20
+  #自定义i18n国际化配置
+  messages:
+    basename: il8n/messages
+    # jackson时间格式化
+  jackson:
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
 
 mybatis-plus:
   # 如果是放在src/main/java目录下 classpath:/com/yourpackage/*/mapper/*Mapper.xml
   # 如果是放在resource目录 classpath:/mapper/*Mapper.xml
   mapper-locations: classpath:/mapper/*Mapper.xml
+#  mapper-locations: classpath:/com/example/springsduty/dao/mapper/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
-  typeAliasesPackage: cn.saytime.model
+  typeAliasesPackage: com.example.springsduty.dao.entity
   global-config:
     #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
     id-type: 0
     #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
-    field-strategy: 1
+    field-strategy: 0
     #驼峰下划线转换
-    #db-column-underline: true
+    db-column-underline: true
     #刷新mapper 调试神器
     #refresh-mapper: true
     #数据库大写下划线转换
     #capital-mode: true
     # Sequence序列接口实现类配置
-    #key-generator: com.baomidou.mybatisplus.incrementer.OracleKeyGenerator
+#    key-generator: com.baomidou.mybatisplus.incrementer.OracleKeyGenerator
     #逻辑删除配置（下面3个配置）
     #logic-delete-value: 1
     #logic-not-delete-value: 0
@@ -34,9 +61,10 @@ mybatis-plus:
     #自定义填充策略接口实现
     #meta-object-handler: com.baomidou.springboot.MyMetaObjectHandler
   configuration:
+    #配置返回数据库(column下划线命名&&返回java实体是驼峰命名)，自动匹配无需as（没开启这个，SQL需要写as： select user_id as userId）
     map-underscore-to-camel-case: true
     cache-enabled: false
-    #配置JdbcTypeForNull
+    #配置JdbcTypeForNull,oracle数据库必须配置
     jdbc-type-for-null: 'null'
 
 
